# propease-backend

./: .env  Dockerfile  alembic.ini  docker-compose.yml  postgresql.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 11494f40a5bb_user_modified.py  13d816553d0a_dynamic_models.py  542858d3c8ff_dynamic_models.py  728899236da7_user_modified_with_roles.py  84cbf4a0f3ea_initial_migration_from_local.py  8ad71ff20547_todo_added.py  945235386233_user_table_added.py  cec7c0468f72_tenant_detail_added.py  ffecda279ff0_todo_added.py
app/: main.py
app/core/: config.py
app/db/: base.py  load_models.py  session.py
app/models/: property.py  tenant.py  todo.py  user.py
