[project]
name = "propease-backend"
version = "0.1.0"
description = "A RESTful API for the Propease web app, written in FastAPI and using SQLAlchemy as the ORM."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.8",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
